--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -21,8 +21,8 @@
             {% endif %}
           {% endif %}
         {% endfor %}
-        <!-- <li><a href="https://github.com/pearsonlab">Code</a></li> -->
-        <li><a href="https://github.com/pearsonlab/pearsonlab.github.io/wiki">Wiki</a></li>
+        <!-- <li><a href="https://github.com/nkatiyar">Code</a></li> -->
+        <li><a href="https://github.com/nkatiyar/nkatiyar.github.io/teaching">Teaching</a></li>
       </ul>
     </div><!--/.navbar-collapse -->
   </div>
