Changed nav of teaching.md

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -22,7 +22,7 @@
           {% endif %}
         {% endfor %}
         <!-- <li><a href="https://github.com/nkatiyar">Code</a></li> -->
-        <li><a href="https://github.com/nkatiyar/nkatiyar.github.io/teaching">Teaching</a></li>
+        <li><a href="https://github.com/nkatiyar/nkatiyar.github.io/wiki">Wiki</a></li>
       </ul>
     </div><!--/.navbar-collapse -->
   </div>
